# ai-mental-health-demo

./: .env.example  .gitignore  README.md  app.py  backend.py  config.py  constants.py  prompts.py  pyproject.toml  state.py
.streamlit/: config.toml
models/: anthropic_client.py  ollama_client.py  openai_client.py
specs/: code-style.md  demo-spec.md
styles/: custom.css
