[tool.poetry]
name = "ai-mental-health-demo"
version = "0.1.0"
description = "Live demo app showing progressive AI engineering layers for mental health contexts"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
anthropic = "^0.40.0"
openai = "^1.50.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.12.0"
tenacity = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
